# equipment-degradation-detector

./: .gitignore  CLAUDE.md  Containerfile  README.md  nginx.conf  pyproject.toml  supervisord.conf
.claude/: settings.local.json
.claude/skills/analysis-engine/: SKILL.md
.claude/skills/contract-tdd/: SKILL.md
.claude/skills/dev-workflow/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
backend/: dependencies.py
backend/analysis/: anomaly.py  engine.py  feature.py  trend.py
backend/ingestion/: event_bus.py  main.py
backend/interfaces/: __init__.py  data_store.py  feature.py  result_store.py
backend/result_store/: sqlite.py
backend/scheduler/: main.py
backend/store/: sqlite.py
docs/adr/: analysis_ui_redesign.md  architecture_minutes.md  debug_gui_data_operations.md  dev_team_minutes.md  sw_architecture_minutes.md  tech_selection_minutes.md
docs/investigation/: anomaly_score_false_positive.md  architecture-review.md  performance-review.md
docs/planning/: architecture-redesign-plan.md  feature-selection.md  phase-plan-before-step2.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
k8s/: buildconfig.yaml  deployment.yaml  imagestream.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  route.yaml  service.yaml
tests/integration/: test_analysis_flow.py
tests/unit/: test_analysis_engine.py  test_anomaly.py  test_data_store_contract.py  test_dependency_rules.py  test_event_bus.py  test_feature_builders.py  test_result_store_contract.py
(+27 files in other folders)
